<resources>
    <string name="app_name">어린이집 정보공개</string>//Right To Know

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_oss">오픈소스 라이선스</string>
    <string name="detail_sido">✔︎ 시도 :&#160;</string>
    <string name="detail_sigungu">✔︎ 시군구 :&#160;</string>
    <string name="detail_type">✔︎ 어린이집 유형 :&#160;</string>
    <string name="detail_now">✔︎ 현재</string>
    <string name="detail_daycare_center">&#160;1. 어린이집명 :&#160;</string>
    <string name="detail_boss">&#160;2. 대표자 :&#160;</string>
    <string name="detail_director">&#160;3. 원장 :&#160;</string>
    <string name="detail_vio_old">✔︎︎ 위반당시</string>
    <string name="detail_address">✔︎︎ 주소 :&#160;</string>
    <string name="detail_vio_action">✔︎︎ 위반행위 : </string>
    <string name="detail_violator_action">✔︎︎ 위반행위의 내용: </string>
    <string name="detail_vio_disposal">✔︎︎ 처분내용 : </string>
    <string name="detail_violator_disposal">✔︎︎ 행정처분의 내용: </string>
    <string name="turn">순번</string>
    <string name="sido">시도</string>
    <string name="sigungu">시군구</string>
    <string name="daycare_center_name">어린이집명</string>
    <string name="type">유형</string>
    <string name="contents_share">공유하기</string>
    <string name="map_view">위치 보기</string>
    <string name="share_message">공유하기</string>
    <string name="name">이름</string>
    <string name="detail_violator_name">✔︎︎ 이름 :&#160;</string>
    <string name="vio_old_center_name">위반당시 어린이집</string>
    <string name="detail_vio_old_center_name">✔︎︎ 위반행위당시 어린이집 :&#160;</string>
    <string name="detail_violation_history">✔︎︎ 법 위반 이력 :&#160;</string>
    <string name="violation_history">이력</string>
    <string name="violation_history_count">회</string>
    <string name="title_vioation_facility_inquiry">위반시설 조회</string>
    <string name="title_vioation_facility_inquiry_detail">위반시설 조회 상세</string>
    <string name="title_violator_inquiry">위반행위자 조회</string>
    <string name="title_violator_inquiry_detail">위반행위자 조회</string>
    <string name="title_certified">평가 인증</string>
    <string name="title_child_certified">평가 인증 어린이집 상세</string>
    <string name="msg_latest_info">최신정보입니다.</string>
    <string name="day_care_center">어린이집</string>
    <string name="detail">(상세)</string>
    <string name="app_share">앱 공유하기</string>
    <string name="review_write">있어요</string>
    <string name="my_location">내 지역 위반시설 및 행위자 조회</string>
    <string name="location_permission_denied_message">위치 사용 권한을 반드시 설정해 주셔야 합니다.\n감사합니다.</string>
    <string name="not_connected_internet">인터넷에 연결되지 않았습니다.</string>
    <string name="no_result">내 근처 위반 검색 결과가 없습니다.</string>
    <string name="please_retry">죄송합니다. 문제가 생겼습니다. 잠시후 다시 시도해주세요.</string>
    <string name="empty" />
    <string name="photo_credit_by">Photo credit: Edukame.com</string>
    <string name="version">ver</string>
    <string name="abused">학대</string>
    <string name="attack">폭행</string>
    <string name="year">년</string>
    <string name="month">월</string>
    <string name="title_child_certified_detail">어린이집평가인증 신규 및 재인증 결과발표</string>
    <string name="opensource_licenses">오픈소스 라이선스</string>
    <string name="hint_all_search">예)지역,주소,어린이집명</string>
    <string name="title_news">뉴스 보도</string>
    <string name="title_video">VIDEO</string>
    <string name="play_in_portrait">세로모드로 재생</string>
    <string name="play_in_landscape">가로모드로 재생</string>
    <string name="no_videos_found">영상을 찾을 수 없습니다.</string>
    <string name="api_query1">어린이집 아동학대</string>
    <string name="api_query2">어린이집 부정수급</string>

    <string name="api_sort">date</string><!--sim-->

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">News</string>

    <string name="msg_subscribed">Subscribed to news topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="not_fount_youtube">미리보기 이미지와 영상은 "유투브 앱"이 설치 또는 활성화 되어 있어야 볼 수 있습니다.\n앱을 설치 또는 활성화 해주시길 바랍니다.</string>

    <!--preferences key-->
    <string name="key_notifications">notifications_key</string>
    <string name="key_app_version">app_version_key</string>
    <string name="set_notificatinos">알림 설정</string>
    <string name="set_notifications_summary_on">알림을 받습니다.</string>
    <string name="set_notifications_summary_off">알림을 받지 않습니다</string>
    <string name="check_version">최신 버전 확인</string>
    <string name="app_update">앱을 업데이트 하시겠습니까?</string>
    <string name="not_found_playstore">구글플레이스토어를 찾을 수 없습니다.</string>
    <string name="already_latest_version">이미 최신버전 입니다.</string>
    <string name="key_opensource_license">opensource_license_key</string>
    <string name="go_out">없어요</string>
    <string name="go_back">돌아가기</string>
    <string name="go_out_message">감사합니다.\n남겨주실 말씀이 있을까요?</string>
    <string name="donation">후원</string>
    <string name="help">도움말</string>
    <string name="help_content">* 시설 정보는 어린이집 정보공개 포털을 기반으로 제공합니다.\n\n* 행정처분 받은 시설은, 각 지자체가 어린이집 정보공개 포털에 공유하게 되어 있습니다.\n\n* 공표시기가 지난 경우, 재판중인 경우, 공표 여부를 시설에서 선택할 수 있는 경우는 포털에서 확인할 수 없습니다.\n\n* 확실히 행정처분이 되었으나, 공표되지 않은 시설이 있다면 각 지자체에 민원을 신청하시거나 제보 주시면 민원 신청해 보겠습니다.(ovsoc@daum.net)\n\n 좋은 하루 보내세요.</string>
    <string name="child_abuse">아동학대 의심에서 신고까지</string>
    <string name="error_server">서버에 문제가 생겼습니다. 잠시후 다시 시도해주세요.</string>
    <string name="empty_search_query">검색어를 입력해주세요.</string>
    <string name="show_location">위치보기</string>
    <string name="hint_sort">정렬</string>
    <string name="vio_fac_loc">법 위반 시설 위치</string>
    <string name="str_done">완료</string>
    <string name="vio_fac">법 위반 어린이집</string>
    <string name="video_query">아동학대 CCTV</string>
    <string name="please_select_the_player_mode">플레이어 모드를 선택해 주세요</string>
    <string name="portrait_mode">세로모드</string>
    <string name="landscape_mode">가로모드</string>
    <string name="youtube_use_warning">유투브 앱이 설치되어 있어야 합니다. \n\n유투브 앱이 설치되어 있다면, \'사용안함\'에서 \'사용\'으로 설정을 변경해야 합니다</string>
</resources>