<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <item
      android:id="@+id/bottom_nav_violation_facility"
      android:icon="@drawable/ic_home_black_24dp"
      android:title="@string/title_vioation_facility_inquiry"/>

  <item
      android:id="@+id/bottom_nav_violator"
      android:icon="@drawable/ic_person"
      android:title="@string/title_violator_inquiry"/>
  <item
      android:id="@+id/bottom_nav_certified"
      android:icon="@drawable/ic_school_black_24dp"
      android:title="@string/title_certified"/>

  <item
      android:id="@+id/bottom_nav_news"
      android:icon="@drawable/ic_notifications_24dp"
      android:title="@string/title_news"/>
  <item
      android:id="@+id/bottom_nav_video"
      android:icon="@drawable/ic_videocam_24dp"
      android:title="@string/title_video"/>

</menu>
