<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:orientation="vertical"
    >
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="?android:attr/windowTitleSize"
      android:gravity="center"
      android:orientation="horizontal"
      >
    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        >
      <TextView
          android:id="@+id/turn_textview"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_gravity="center"
          android:gravity="center"
          android:text="@string/turn"
          android:textAppearance="@style/TextAppearance.AppCompat.Body1"
          android:textStyle="bold"
          />
      <ImageView
          android:layout_width="20dp"
          android:layout_height="20dp"
          android:layout_gravity="bottom|center_horizontal"
          android:src="@drawable/ic_arrow_drop_down_black_24dp"
          />

    </FrameLayout>
    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        >
      <TextView
          android:id="@+id/sido_textview"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:gravity="center"
          android:layout_gravity="center"
          android:text="@string/sido"
          android:textAppearance="@style/TextAppearance.AppCompat.Body1"
          android:textStyle="bold"
          />
      <ImageView
          android:layout_width="20dp"
          android:layout_height="20dp"
          android:layout_gravity="bottom|center_horizontal"
          android:src="@drawable/ic_arrow_drop_down_black_24dp"
          />

    </FrameLayout>
    <TextView
        android:id="@+id/sigungu_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/sigungu"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:gravity="center"
        android:text="@string/vio_old_center_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textStyle="bold"
        />
    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        >
      <TextView
          android:id="@+id/history_textview"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:gravity="center"
          android:layout_gravity="center"
          android:text="@string/violation_history"
          android:textAppearance="@style/TextAppearance.AppCompat.Body1"
          android:textStyle="bold"
          />
      <ImageView
          android:layout_width="20dp"
          android:layout_height="20dp"
          android:layout_gravity="bottom|center_horizontal"
          android:src="@drawable/ic_arrow_drop_down_black_24dp"
          />
    </FrameLayout>
  </LinearLayout>
  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@color/colorPrimary"
      />
</LinearLayout>
